tests/fixtures/invalid/dict_bitxor_int.py
# Cannot bitwise XOR Dict[str, int] and Int
x: dict[str, int] = {"a": 1} ^ 1
